# ChatGPT-Next-Web

./: .babelrc  .bioserver.env.template  .deployment  .dockerignore  .editorconfig  .env  .env.exampe  .env.example  .env.local  .env.production  .env.template  .eslintignore  .eslintrc.json  .gitignore  .gitlab-ci.yml  .gitpod.yml  .lintstagedrc.json  .npmrc  .pre-commit-config.yaml  .prettierrc.js  .secrets.baseline  .tool-versions  .yarnrc  .yarnrc.yml  .yml  3  AI  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  Chat_soup.py  Dockerfile  Dockerfile.bak  Dockerfile.linux-build  Dockerfile_CN  HAI.js  LICENSE  Makefile  Mynotes.md  OWNERS  (+75 more)
.app/组件/: home.tsx  sidebar.tsx
.circle-ci/: pipeline.yml
.devcontainer/: .p10k.zsh  .zshrc  antigen.zsh  devcontainer.json  postcreate.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 1_bug_report.yml  1_bug_report_cn.yml  2_feature_request.yml  2_feature_request_cn.yml  bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  功能建议.md  功能建议.yml  反馈问题.md  反馈问题.yml
.github/workflows/: Upstream.yml  app.yml  auto-rebase.yml  azure-static-web-apps-polite-smoke-01a2a4f00.yml  codeql.yml  create-diagram.yml  crontab_cache_to_dockerhub.yml  deploy_github_pages.yml  deploy_preview.yml  docker-buildx.yml  docker-nightly.yml  docker.yml  dockerToHub-dev.yml  dockerToHub-dev.yml.bak  dockerToHub.yml  docker_build.yml  docker_update.yml  issue-translator.yml  jekyll-gh-pages.yml  main.yml  main_next-chat.yml  preview.yaml  prod-deploy.yml  release-notes.js  release-tag.yml  remove_deploy_preview.yml  sync-allbranch.yml  sync.yml  test.yml  timqi.yml
.husky/: pre-commit
.yarn/releases/: yarn-3.6.1.cjs
App/地点/: cn.ts
android/: build.gradle  capacitor.settings.gradle  gradlew  variables.gradle
android/app/: build.gradle  capacitor.build.gradle
app/: 404.tsx  500.tsx  AccessOverlay.tsx  auth.ts  azure.ts  calcTextareaHeight.js  calcTextareaHeight.ts  command.ts  constant.ts  constant.ts.bak  custom-style-web.scss  global.d.ts  globals.css  globals.scss  layout.tsx  markdown.css  markdown.scss  masks.ts  middleware.ts  middlware.ts  page.tsx  polyfill.ts  prompt.ts  providers.tsx  requests.ts  store.ts  typing.ts  utils.ts
app/(app)/: layout.tsx
app/about/: page.tsx
app/api/: access.ts  account.ts  alibaba.ts  anthropic.ts  auth.ts  azure.ts  baidu.ts  bedrock.ts  bytedance.ts  chargebee.ts  common.ts  deepseek.ts  glm.ts  google.ts  huawei.ts  iflytek.ts  moonshot.ts  oauth_callback.ts  openai.ts  ppio.ts  proxy.ts  siliconflow.ts  stability.ts  stepfun.ts  tts.ts  xai.ts
app/app/: login.scss
app/auth/: layout.module.scss  layout.tsx  login.module.scss  login.tsx  page.tsx
app/auth_callback/: page.tsx
app/azure-speech/: AzureRoles.ts  react-loading.js  tts-avatar.tsx  voice-call.tsx
app/client/: api.ts  auth.ts  controller.ts  core.ts  index.ts  types.ts
app/cognitive/: speech-audio.tsx  speech-audioRecorder.tsx  speech-audioRecorderClass.tsx  speech-avatar-component.tsx  speech-avatar.tsx  speech-record.tsx  (+2 more)
biochatter-server/: Dockerfile  LICENSE  README.md  app.py  pyproject.toml
biochatter-server/src/: constants.py  conversation_manager.py  job_recycle_conversations.py
biochatter-server/tests/: test_conversation_manager.py
docs/: azure-openai-cn.md  bedrock-response-format.md  bt-cn.md  cloudflare-pages-cn.md  cloudflare-pages-en.md  cloudflare-pages-es.md  cloudflare-pages-ja.md  cloudflare-pages-ko.md  cloudflare-r2-cn.md  faq-cn.md  faq-en.md  faq-es.md  faq-ja.md  faq-ko.md  faq.en.md  mobile-build-instruction.md  rag-cn.md  s3-oss.md  stable-diffusion-plugin-cn.md  synchronise-chat-logs-cn.md  synchronise-chat-logs-en.md  synchronise-chat-logs-es.md  synchronise-chat-logs-ja.md  synchronise-chat-logs-ko.md  translation.md  user-manual-cn.md  vercel-cn.md  vercel-en.md  vercel-es.md  vercel-ja.md  vercel-ko.md
functions/: helloworld.ts  tsconfig.json
ios/: .gitignore
lib/: auth.ts  auth_client.ts  auth_list.ts  auth_type.ts  charts_theme.ts  prisma.ts  utils.ts
locales/: cn.ts  cs.ts  fr.ts  ko.ts  ru.ts  tw.ts  vi.ts
nginx/: chat.conf
pages/: _app.tsx  chat.tsx
prisma/: schema.prisma
public/: 51.js  audio-processor.js  baidu.hm.js  css2  css2family=Noto+Sanswght@300;400;700;900&display=swap.font  css2o7ustvmw.tmp  google-fonts.css  manifest.json  masks.json  plugins.json  privacy-policy.html  prompt_library.json  prompts.json  redirect.js  robots.txt  serviceWorker.js  serviceWorkerRegister.js  site.webmanifest  userAgentValidator.js
script/: __init__.py
scripts/: .gitignore  delete-deployment-preview.sh  docker-entrypoint.sh  fetch-prompts.mjs  getAppDir.mjs  init-proxy.sh  pages.sh  proxychains.conf  proxychains.template.conf  release.mjs  setup-ubuntu-2204-ci.sh  setup.sh
src/: bindings.ts  main.ts
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: desktop.json  main.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  shortcuts.rs  stream.rs
templates/: author.html  category.html  index.html  links.html  page.html  post.html  tag.html  tags.html
test/: isValidMessage.test.ts  model-available.test.ts  model-provider.test.ts  model.test.ts  sum-module.test.ts  vision-model-checker.test.ts
whereq/: README.md
workflComfy/: text2image.json
(+846 files in other folders)
